@@ -189,7 +189,7 @@ extern gamestate gs;
 extern int fAutoGame, fAutoMove, fAutoRoll, fAutoCrawford, cAutoDoubles,
     fCubeUse, fNackgammon, fVarRedn, nRollouts, nRolloutTruncate, fConfirm,
     fDisplay, fAutoBearoff, fShowProgress, fBeavers, fOutputMWC,
-    fOutputWinPC, fOutputMatchPC, fJacoby;
+    fOutputWinPC, fOutputMatchPC, fJacoby, fOutputRawboard;
 
 extern evalcontext ecEval, ecRollout, ecTD;
 
@@ -373,6 +373,7 @@ extern void CommandAccept( char * ),
     CommandSetNackgammon( char * ),
     CommandSetOutputMatchPC( char * ),
     CommandSetOutputMWC ( char * ),
+    CommandSetOutputRawboard( char * ),
     CommandSetOutputWinPC( char * ),
     CommandSetPlayerEvaluation( char * ),
     CommandSetPlayerExternal( char * ),
